deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ies
  labels:
    app.kubernetes.io/part-of: ies
